2003-06-03  Charles Swiger  <chuck@pkix.net>
	* moved ChangeLog out of main.c into this file
	* updated Makefile to pay attention to CFLAGS, CC, etc
	* ANSI-fied and added prototypes to fix most warnings
	* wrote a manpage (ouch, nroff) and fixed Makefile-based install so
	  that I could build a FreeBSD package properly

HISTORICAL:
	
21-Nov-89: Hey, This program really works!!!!
I (Mike) realize this as I put a new line in my .logout
with the proper arguments to delete my ENTIRE account (by accident)
boy was I surprised the next time I logged in (Mike)

First release: 23-Nov-89 Version 2.1

25-Nov-89: Added -V flag, changed linked lists to do insertion
at head of list, converted list structures to end in one
character arrays for less malloc's, eliminated keeping track of
volumes if no volume flags are on, implemented QUIET mode. (Jay)

Second release: 29-Nov-89 Version 2.2

6-Dec-89: Emergency patch to fix a bug with multiple directories
and mount point switches -w -r and -a. (Jay)

Third release: 6-Dec-89 Version 2.2.1

3-Jan-90: Added -t switch to only remove files more than one day
old.  Also, removed ERROR in favor of FATAL for the error handling,
and converted the malloc() errors from INTERNAL to FATAL. (Jay)

13-Jan-90: Added -x and -X switch for excluding directories, and
altered the parsing of the .cleanrc appropriately.  Changed -t
switch to take an argument (number of days).  Removed -m switch
since it can be re-done with -xX. (Jay)

16-Jan-90: Cleaned up the usage for the new version. (Jay)

Fourth release: ????? Version 2.3

13-Feb-90: Fixed a minor bug with one character directory names.
(Jay)

Fifth release: 13-Feb-90 Version 2.4

20-Feb-90: At Mark Held's request, I am commenting out the -r and
	-a switches (read-only and backup volume traversal) (Jay)

Sixth release: 21-Feb-90 Version 2.5

circa 1991: I picked this program up from the CMU computer
club and started munging it to run under NEXTSTEP.  I added the ability