@@ -1,0 +1,18 @@
+# New ports collection makefile for: clean
+# Date created:        2003-6-3
+# Whom:                chuck@pkix.net
+#
+# $FreeBSD: $
+
+PORTNAME= 	clean
+PORTVERSION=	3.2
+CATEGORIES=	sysutils
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
+MASTER_SITE_SUBDIR= ${PORTNAME}
+
+MAINTAINER=	chuck@pkix.net
+COMMENT= Automatically remove unwanted files
+
+MAN1=	clean.1
+
+.include <bsd.port.mk>
