@@ -1,0 +1,71 @@
+<HTML>
+<BODY>
+<H2>NAME</H2>
+<PRE>
+     clean - automatically remove unwanted files
+</PRE>
+<H2>SYNOPSIS</H2>
+<PRE>
+     clean [-bifloqVw] [-t days] [-eE glob] [-xX exclude] [directory ...]
+</PRE>
+<H2>DESCRIPTION</H2><PRE>
+     The <B>clean</B> utility searches through the filesystem for "temporary files" which can be deleted safely.
+
+     The options are as follows:
+
+     <B>-b</B>      batch mode: Wait until all subdirectories have been traversed and
+             then prompts to delete the complete list of matching files (default)
+
+     <B>-i</B>      interactive mode: Prompt for deletion of each file as it is found.  Also, allows entire directory trees to be skipped at the prompt.
+
+     <B>-f</B>      force mode: Run the program quietly and automatically delete all matching files.  This switch recommended only for expert users.
+
+     <B>-l</B>      flat mode: Only clean the current directory; do not enter subdirectories.
+
+     <B>-o</B>      object files: Add *.o and *.u to the list of regex patterns to search for.
+
+     <B>-q</B>      Quiet mode: Do not echo the directory names while traversing the filesystem.
+
+     <B>-V</B>      Version number: Print the version number of the program.
+
+     <B>-t</B> <I>days</I>
+             time mode: only eliminate files that are more than <I>days</I> old.
+
+     <B>-e</B> <I>glob</I>
+             Use this expression without using the the .cleanrc or the default list (as appropriate).  Can be used more than once.
+
+     <B>-E</B> <I>glob</I>
+             Use this expression in addition to the .cleanrc or the default list.  Can be used more than once.
+
+     <B>-x</B> <I>glob</I>
+             Exclude this directory name from the traversal.  This overrides the .cleanrc and the default list.  Can be used more than once.
+
+     <B>-X</B> <I>glob</I>
+             Exclude this directory name from the traversal.  This is in addition to the .cleanrc and the default list.  Can be used more than once.
+
+             If no directory is specified, then clean defaults to the current directory.  Only one of <B>-b</B>, <B>-i</B>, or <B>-f</B> may be specified.  Also, <B>-e</B> and <B>-x</B> may not be used in conjunction with <B>-E</B> and <B>
+-X</B>.
+
+     # Default .cleanrc
+     #
+     # Expressions to match
+     core
+     *~
+     *.BAK
+     *.CKP
+     *.NEW
+     \#*#
+     .emacs_[0-9]*
+     dead.letter
+     *.otl
+     *.backup
+     # End of default .cleanrc
+
+[ Note: need to double-check the quotation of regex'es through various levels of documentation conversion. ]
+</PRE>
+<H2>WARNING</H2><PRE>
+     This program was written with the express purpose of deleting (unwanted) files.  Please be certain that you understand this program and that you really want to use such an automatic deletion process before you begin.
+</PRE>
+<HR>
+</BODY>
+</HTML>
